--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<h1>Hola Mundo</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/download.css">
+    <link rel="stylesheet" href="core/core.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>POSCLI App</title>
+</head>
+<body>
+
+    <!-- Menu Bar -->
+
+    <header style="margin-bottom: 0px;">
+        <h1 style="margin-bottom: 0px;" class="title-primary">POSCLI</h1>
+    </header>
+
+    <!-- Enlace a la documentacion del proyecto -->
+
+    <sections>
+        <section id="docs" style="display: grid;justify-content: center;">
+            <a href="doc/doc.html" class="btn-a-primary">Documentation</a>
+        </section>
+    </sections>
+
+    <!-- Sistemas operativos (sections -> section) -->
+
+    <sections>
+
+        <!-- Windows (section <- sections) -->
+
+        <h2 style="color: #0368d3; margin-top: 0px;font-size: 30px;text-align: center; margin-top: 0px; font-family: sans-serif; border-bottom: solid #0368d3; display: block;">Download</h2>
+        <section class="down-box">
+            <h2><span>POSCLI</span> for windows</h2>
+            <br>
+            <div class="int">
+                <a href="" class="btn-a-outlined">Download x32</a>
+            </div>
+            <div class="sil">
+                <a href="" class="btn-a-outlined">Download x64</a>
+            </div>
+        </section>
+
+        <!-- Linux (section <- sections) -->
+
+        <section class="down-box">
+            <h2><span>POSCLI</span> for Linux</h2>
+            <br>
+            <div class="int">
+                <a href="" class="btn-a-outlined">Download</a>
+            </div>
+        </section>
+    </sections>
+</body>
+</html>
