--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/download.css">
-    <link rel="stylesheet" href="core/core.css">
+    <link rel="stylesheet" href="download.css">
+    <link rel="stylesheet" href="core.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POSCLI App</title>
 </head>
